fixed display on mobile devices

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,20 +1,3 @@
-@media only screen and (min-width: 480px) {
-    #map {
-        width: 100%;
-        height: 400px;
-    }
-    .trailBtnContain {
-        margin: 0px;
-    }
-
-}
-@media only screen and (min-width: 1000px) {
-    #map {
-        width: 100%;
-        height: 700px;
-    }
-}
-
 body {
     background-color: floralwhite;
     font-family: sans-serif;
@@ -22,21 +5,55 @@ body {
     padding: 0;
 }
 
-#blackHeader {
+button {
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 1px;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+}
+
+.wideHeader {
     width: 100%;
     background-color: black;
     overflow: auto;
     border: 0px;
 }
 
-#whiteHeader {
+.smallHeader {
+    display: none;
     width: 100%;
-    background-color: red;
-    padding: 1em 1em 1em 1.5em;
-    color: white;
-    line-height: 50%;
+        margin: 0;
+        background-color: black;
 }
 
+.smallHeader img {
+    margin-left: 15%;
+    width: 70%;
+}
+.smallHeader .trailBtnContainSmall{
+    width: 100%;
+    padding: 0;
+
+}
+.smallHeader .trailBtnContainSmall *{
+    float: left;
+    margin: 0;
+    width: 33.3%;
+}
+
+#map {
+        margin: 0;
+    width: 100%;
+    height: 700px;
+}
 
 #greenInfowindow {
     width: 100%;
@@ -45,6 +62,7 @@ body {
     color: white;
     
 }
+
 #amberInfowindow {  
     width: 100%;
     background-color: sandybrown;
@@ -64,33 +82,18 @@ body {
     padding: 0.5em;
 }
 
-#map {
-    width: 100%;
-    height: 400px;
-}
 .infowindowImage {
     height: 100px;
     padding: 1em 1em 1em 0em;
     float: left;
     
 }
-    .trailBtnContain {
-        margin: 30px 0px 0px 30%;
-    }
-.trailBtn {
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 1px;
-    -webkit-transition-duration: 0.4s;
-    transition-duration: 0.4s;
+
+.trailBtns {
+    width:  100%;
+    margin: 30px 0px 0px 30%;
 }
+
 .trailE{
     background-color: #43A047;
 }
@@ -109,4 +112,22 @@ body {
 
 .trailH:hover{
     background-color: #EF5350;
+}
+
+@media only screen and (max-width: 480px) {
+    #map {
+        width: 100%;
+        height: 440px;
+    }
+    .trailBtnContainSmall{
+        width: 100%;
+        height: ;
+    }
+    .smallHeader{
+        display: inline-block;
+    }
+    .wideHeader{
+        display: none;
+    }
+
 }
